--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <body>
 	<h3>ACTIVITY 5 - PRODUCT TOTAL
 		<br>
-	Name: D. Cayanes
+	Name: D. Cayanes - BSIS 1C
 <br>
 </h3>
 <div class="main">
