--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Product</title>
-
-	  <style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Product</title>
+  <style>
     * {
       box-sizing: border-box;
       font-family: 'Segoe UI', sans-serif;
@@ -15,33 +14,31 @@
       margin: 0;
       padding: 20px;
       background: linear-gradient(45deg, #8e2de2, #4a00e0);
-
     }
 
+    .product {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+      margin-bottom: 20px;
+      background: #f9f9f9;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 1px 5px rgba(0,0,0,0.05);
+    }
 
-	.product {
-   display: flex;
-   align-items: center;
-   gap: 15px;
-   margin-bottom: 20px;
-   background: #f9f9f9;
-   padding: 10px;
-   border-radius: 10px;
-   box-shadow: 0 1px 5px rgba(0,0,0,0.05);
-   } 
+    .product img {
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
 
-   .product img {
-   width: 80px;
-   height: 80px;
-   object-fit: cover;
-   border-radius: 10px;
- 	}
-
- 	.product-info {
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   }
+    .product-info {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
 
     .main {
       display: flex;
@@ -113,72 +110,66 @@
       }
     }
   </style>
-
 </head>
 <body>
-	<h3>ACTIVITY 5 - PRODUCT TOTAL
-		<br>
-	Name: D. Cayanes - BSIS 1C
-<br>
-</h3>
-<div class="main">
-	<div id="column1">
-		<h1>Product Total</h1>
+  <h3>
+    ACTIVITY 5 - PRODUCT TOTAL<br>
+    Name: D. Cayanes - BSIS 1C<br>
+  </h3>
+  <div class="main">
+    <div id="column1">
+      <h1>Product Total</h1>
 
-		<div class="product">
-			<img src="https://burst.shopifycdn.com/photos/light-green-t-shirt.jpg" alt="">
-		<p>TShirt - 650</p>
-		<button onclick="addToCart('TShirt', 650)">Add to Cart</button>
-		</div>
+      <div class="product">
+        <img src="https://burst.shopifycdn.com/photos/light-green-t-shirt.jpg" alt="">
+        <p>TShirt - 650</p>
+        <button onclick="addToCart('TShirt', 650)">Add to Cart</button>
+      </div>
 
+      <div class="product">
+        <img src="https://thumbs.dreamstime.com/b/thai-student-shorts-isolated-white-background-97454720.jpg" alt="">
+        <p>Short - 150</p>
+        <button onclick="addToCart('Short', 150)">Add to Cart</button>
+      </div>
 
-		<div class="product">
-			<img src="https://thumbs.dreamstime.com/b/thai-student-shorts-isolated-white-background-97454720.jpg" alt="">
-		<p>Short - 150</p>
-		<button onclick="addToCart('Short', 150)">Add to Cart</button>
-		</div>
+      <div class="product">
+        <img src="https://t3.ftcdn.net/jpg/00/61/87/62/360_F_61876261_FUoySFWEGESVVmMuqJidqri9r5hA0ln5.jpg" alt="">
+        <p>Pants - 500</p>
+        <button onclick="addToCart('Pants', 500)">Add to Cart</button> 
+      </div>
+    </div>
 
-		<div class="product">
-			<img src="https://t3.ftcdn.net/jpg/00/61/87/62/360_F_61876261_FUoySFWEGESVVmMuqJidqri9r5hA0ln5.jpg" alt="">
-		<p>Pants - 500</p>
-		<button onclick="addToCart('Pants', 500)">Add to Cart</button>	
-		</div>
+    <div class="column2">
+      <h2>Your Cart</h2>
+      <ul id="cart"></ul>
+      <p id="total">Total: ₱0</p>    
+    </div>
+  </div>
 
-	<div class="column2">
-		<h2>Your Cart</h2>
-		<ul id="cart"></ul>
-		<p id="total"></p>		
-	</div>
-</div>
+  <script type="text/javascript">
+    const cart = [];
 
-<script type="text/javascript">
-	const cart = [];
+    function addToCart(productName, price) {
+      cart.push({ name: productName, price: price });
+      showCart();
+    }
 
-	function addToCart(productName, price)
-	{
-		cart.push({ name: productName, price: price});
-		showCart();
-	}
+    function showCart() {
+      const cartList = document.getElementById('cart');
+      const totalElement = document.getElementById('total');
+      cartList.innerHTML = '';
 
-	function showCart()
-	{
-		const cartList = document.getElementById('cart');
-		const totalElement = document.getElementById('total');
-		cartList.innerHTML = '';
+      let total = 0;
 
-		let total = 0;
+      cart.forEach((item) => {
+        const li = document.createElement('li');
+        li.textContent = `${item.name} - ₱${item.price}`;
+        cartList.appendChild(li); // This line adds the item to the list
+        total += item.price;
+      });
 
-		cart.forEach
-		((item) =>
-		{
-			const li = document.createElement('li');
-			li.textContent = `${item.name} - ${item.price}`;
-			total += item.price;
-		}
-		);
-
-		totalElement.textContent = `Total: ${total}`;
-	}
-</script>
+      totalElement.textContent = `Total: ₱${total}`;
+    }
+  </script>
 </body>
 </html>
